About section ready now

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="col-4">
-                <div class="user-cart d-md-flex justify-content-center align-items-center">
+                <div class="user-cart">
                    <div class="user me-4">
                     <i class="fa-solid fa-user mobile_user"></i>
                    </div>
@@ -335,6 +335,60 @@
                   </div>
         
                   
+        </div>
+      </section>
+      <section id="About">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6  col-md-12">
+                    <div class="image">
+                        <img src="./assets/images/storyblock.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="about">
+                        <div class="title">
+                            <p class="subtitle">THE PRODUCTS</p>
+                        </div>
+                        <div class="home_title">
+                            <h3 class="home-title">All About Fabulous</h3>
+                        </div>
+                        <div class="desc">
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, to make a type specimen book.
+                              </p>
+                        </div>
+                        <div class="category_list d-flex">
+                          <div class="first me-4">
+                            <ul>
+                                <li class="my-2" style="font-size: 18px;">Lipstick Nail Art</li>
+                                <li class="my-2" style="font-size: 18px;">Eye and facial makeup</li>
+                                <li class="my-2" style="font-size: 18px;">Hair Serum</li>
+                                <li class="my-2" style="font-size: 18px;">Skincare Cream</li>
+                              </ul>
+                          </div>
+                           <div class="second ms-4">
+                            <ul>
+                            <li class="my-2" style="font-size: 18px;">Makeup Brush</li>
+                            <li class="my-2" style="font-size: 18px;">Hair Shampoo</li>
+                            <li class="my-2" style="font-size: 18px;">Professional Powder</li>
+                            <li class="my-2" style="font-size: 18px;">facial Kit</li>
+                          </ul>
+                           </div>
+                        </div>
+                        <div class="view_more btn btn-danger">
+                         View More
+                     </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+      </section>
+      <section id="products" style="background-image: url(./assets/images/testimonialbackground.png);">
+        <div class="container">
+            <div class="row">
+
+            </div>
         </div>
       </section>
    </main>
