--- a/index.html
+++ b/index.html
@@ -92,10 +92,19 @@
                 </div>
                 <div class="col-lg-2">
                     <div class="icons">
-                        <i class="fa-solid fa-magnifying-glass large_glass"></i>
-                        <i class="fa-solid fa-user large_user"></i>
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        <div class="count"><sup>0</sup></div>
+                        <i class="icon fa-solid fa-magnifying-glass large_glass"></i>
+                        <i class="icon fa-solid fa-user large_user"></i>
+                        <i class="icon fa-solid fa-cart-shopping cart"></i>
+                        <div class="count"><sup  class="total_count">0</sup></div>
+                        <div class="box">
+                            <div class="exitbutton">
+                                X
+                            </div>
+                            <ul class="box_device ">
+                            
+                            </ul>
+    
+                    </div>
                     </div>
                     <div class="user_registration me-5">
                             <ul  class="list-unstyled register_ul">
