header was done

--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
             </div>
         </div>
         <div class="container-fluid d-lg-none mobile-container">
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-4">
                     <div class="icons d-md-flex justify-content-center align-items-center ">
                         <div class="menu me-4">
                             <i class="fa-solid fa-bars mobil-bars"></i>
                            
                         </div>
-                        <div class="search">
+                        <div class="search me-4">
                             <i class="fa-solid fa-magnifying-glass"></i>
                             <div class="search_input">
                                 <div class="input_div">
@@ -177,16 +177,16 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="logo w-100  d-flex justify-content-center align-items-center" >
-                        <img src="./assets/images/Logo.png" alt="" >
+                    <div class="logo   d-flex justify-content-center align-items-center" >
+                        <img style="width: 100%;" src="./assets/images/Logo.png" alt="" >
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="user-cart">
-                       <div class="user">
+                    <div class="user-cart d-md-flex justify-content-center align-items-center ">
+                       <div class="user me-4">
                         <i class="fa-solid fa-user mobile_user"></i>
                        </div>
-                       <div class="cart">
+                       <div class="cart me-4">
                         <i class="fa-solid fa-cart-shopping"></i>
                        </div>
                        <div class="user_mobile_registration me-5">
