--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           </div>
         </div>
       </section>
-       <section id="ImportInfo">
+       <section id="Import">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-md-6 col-12">
@@ -989,6 +989,51 @@
               </div>
               
         </div>
+      </section>
+      <section id="faq">
+        <div class="container">
+            <div class="row  justify-content-center align-items-center">
+                <div class="col-lg-9">
+                   <div class="accordion">
+                    <div class="accordion_btn">
+                        <div class="  title">
+                            <h3> First Content </h3>
+                            <i class="fas fa-chevron-down"></i>
+                         </div>
+                     </div>
+                    <div class="content border border-secondary">
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                   </div>
+                </div>
+                <div class="col-lg-9">
+                    <div class="accordion">
+                        <div class="accordion_btn">
+                            <div class="  title ">
+                                <h3> Second Content </h3>
+                                <i class="fas fa-chevron-down"></i>
+                             </div>
+                         </div>
+                        <div class="content border border-secondary">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi doloremque dicta ducimus sapiente? Nam placeat aut, dolores sequi laudantium ex.
+                        </div>
+                       </div>
+                </div>
+                <div class="col-lg-9">
+                    <div class="accordion">
+                        <div class="accordion_btn">
+                            <div class="  title ">
+                                <h3> Third Content </h3>
+                                <i class="fas fa-chevron-down"></i>
+                             </div>
+                        </div>
+                        <div class="content border border-secondary">
+                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo magnam qui at delectus dicta illum maiores tenetur rem voluptatem inventore accusantium voluptatum sequi atque, dolor quis repellat consequuntur ipsam incidunt nulla cupiditate tempora. Ipsum exercitationem placeat dolores tempore ipsam odio voluptate vel atque, hic tempora, illum sint labore, eaque praesentium?
+                        </div>
+                       </div>
+                </div>
+            </div>
+           </div>
       </section>
    </main>
    <footer style="background-color: rgb(242, 246, 249); ">
