--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://demo.ishithemes.com/opencart/OPC100/OPC100L02/image/catalog/cart.png" rel="icon">
     <link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>fabolous</title>
 </head>
 <body>
     <header id="head">
@@ -31,7 +32,7 @@
                 <div class="col-lg-7 ">
                     <nav class="mt-3">
                         <ul class="list-unstyled d-flex justify-content-center align-items-center">
-                            <li class="drone"><a class="text-decoration-none" href="">Drone</a>
+                            <li class="drone"><a class="li_a text-decoration-none" href="">Drone</a>
                                 <div class="drone-menu d-flex">
                                     <div class="indoor menu p-3 ">
                                         <h5 class="text-center ">Indoor Toy <hr></h5>
@@ -62,7 +63,7 @@
                                 </div>
                                
                             </li>
-                            <li  class="accesories"><a class="text-decoration-none" href="">Accesories</a>
+                            <li  class="accesories"><a class="li_a text-decoration-none" href="">Accesories</a>
                                 <div class="accesories-menu  d-flex">
                                     <div class="indoor menu p-3">
                                         <h5 class="text-center">Ryze Tello <hr></h5>
@@ -84,17 +85,17 @@
                                 </div>
                             
                                 </li>
-                            <li><a class="text-decoration-none" href="">Collection</a></li>
-                            <li><a class="text-decoration-none" href="">Components</a></li>
-                            <li><a class="text-decoration-none" href="">Outfits</a></li>
+                            <li><a class="li_a text-decoration-none" href="">Collection</a></li>
+                            <li><a class="li_a text-decoration-none" href="">Components</a></li>
+                            <li><a class="li_a text-decoration-none" href="">Outfits</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-lg-2">
                     <div class="icons">
-                        <i class="icon fa-solid fa-magnifying-glass large_glass"></i>
-                        <i class="icon fa-solid fa-user large_user"></i>
-                        <i class="icon fa-solid fa-cart-shopping cart"></i>
+                        <i class="icon bi bi-search"></i>
+                        <i class="icon bi bi-person"></i>
+                        <i class="icon bi bi-cart cart"></i>
                         <div class="count"><sup  class="total_count">0</sup></div>
                         <div class="box">
                             <div class="cart_button_x">
@@ -315,7 +316,7 @@
           </div>
         </div>
       </section>
-       <section id="Import">
+      <section id="import">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-md-6 col-12">
