--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 </div>
             </div>
             
-            <div class="carousel owl-carousel owl-theme mt-5">
+            <div class="owl-carousel owl-theme  mt-5">
                 <div class="item">
                     <div class="container">
                         <div class="row justify-content-center">
@@ -511,7 +511,7 @@
         </div>
       </section>
       <section id="latest">
-        <div class="container  ">
+        <div class="container featured ">
             <div class="title text-center py-5">
                 <div class="subtitle">
                     <p class="subtitle_title">
