Changed subs padding

--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                            
                         </div>
                         <div class="search me-4">
-                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <i class="bi bi-search"></i>
                             <div class="search_input">
                                 <div class="input_div">
                                     <input type="search_large">
                                 </div>
                          <div class="icon_search">
-                            <i class="fa-solid fa-magnifying-glass large_glass"></i>
+                            <i class="bi bi-search large_glass"></i>
                          </div>
                             </div>
                         </div>
@@ -197,10 +197,10 @@
                 <div class="col-4">
                     <div class="user-cart d-md-flex justify-content-center align-items-center ">
                        <div class="user me-4">
-                        <i class="fa-solid fa-user mobile_user"></i>
+                        <i class="bi bi-person mobile_user"></i>
                        </div>
                        <div class="cart me-4">
-                        <i class="fa-solid fa-cart-shopping"></i>
+                        <i class="bi bi-bag"></i>
                        </div>
                        <div class="user_mobile_registration me-5">
                         <ul  class="list-unstyled register_ul">
@@ -429,11 +429,11 @@
                 </div>
             </div>
             
-            <div class="owl-carousel owl-theme  mt-5">
+            <div class="owl-carousel owl-theme mt-5">
                 <div class="item">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-6 col-md-12">
                                 <div class="detail">
                                     <div class="image">
                                         <img src="./assets/images/Testimonial-1.png" alt="luies charls">
@@ -458,7 +458,7 @@
                 <div class="item">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-6 col-md-12">
                                 <div class="detail">
                                     <div class="image">
                                         <img src="./assets/images/Testimonial-2.png" alt="luies charls">
@@ -483,7 +483,7 @@
                 <div class="item">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-6 col-md-12">
                                 <div class="detail">
                                     <div class="image">
                                         <img src="./assets/images/Testimonial-3.png" alt="luies charls">
@@ -579,7 +579,7 @@
                      </div>
                      <div class="caption text-center">
                          <div class="description">
-                             <p>
+                             <p class="title">
                                 Apple Cinema 30</p>
                          </div>
                          <div class="price">
@@ -587,7 +587,7 @@
                                  95.72€
                                </p>
                          </div>
-                         <div class=" add_cart">
+                         <div class="add_cart">
                              Add To Cart
                      </div>
                      </div>
@@ -636,7 +636,7 @@
                      </div>
                      <div class="caption text-center">
                          <div class="description">
-                             <p>
+                             <p class="title">
                                 Apple Cinema 30</p>
                          </div>
                          <div class="price">
@@ -746,7 +746,7 @@
                      </div>
                      <div class="caption text-center">
                          <div class="description">
-                             <p>
+                             <p class="title">
                                 Apple Cinema 30</p>
                          </div>
                          <div class="price">
@@ -801,7 +801,7 @@
                      </div>
                      <div class="caption text-center">
                          <div class="description">
-                             <p>
+                             <p class="title">
                                 Apple Cinema 30</p>
                          </div>
                          <div class="price">
@@ -856,7 +856,7 @@
                      </div>
                      <div class="caption text-center">
                          <div class="description">
-                             <p>
+                             <p class="title">
                                 Apple Cinema 30</p>
                          </div>
                          <div class="price">
@@ -917,7 +917,7 @@
                      </div>
                      <div class="caption text-center">
                          <div class="description">
-                             <p>
+                             <p class="title">
                                 Apple Cinema 30</p>
                          </div>
                          <div class="price">
@@ -974,7 +974,7 @@
                      </div>
                      <div class="caption text-center">
                          <div class="description">
-                             <p>
+                             <p class="title">
                                 Apple Cinema 30</p>
                          </div>
                          <div class="price">
