--- a/index.html
+++ b/index.html
@@ -159,12 +159,10 @@
                         </div>
                     </div>
                     <div class="search_input_large">
-                            <div class="input_div">
-                                <input type="search_large">
+                            <div class="input_div search_large">
+                                <input type="email" class="form-control" placeholder="Search devices">
                             </div>
-                     <div class="icon_search">
-                        <i class="fa-solid fa-magnifying-glass large_glass"></i>
-                     </div>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -323,7 +321,7 @@
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="animeIcon  ">
                         <div class="image">
-                          <img src="./assets/images/Services-4-50x50.png" alt="">
+                          <img src="./assets/images/Services-1-50x50.png" alt="">
                         </div>
                         <div class="title-text">
                           <h5>Free Delivery</h4>
@@ -537,7 +535,7 @@
             <div class="first_crsl _latest owl-carousel owl-theme" style="transition: 0.5s;">
 
               <div class="item">
-                <div class="row">
+                <div class="row justify-content-center">
                   <div class="col-lg-4 col-md-6 ">
                     <div class="device" data-id="1">
                      <div class="image">
@@ -996,7 +994,7 @@
             <div class="second_crsl _latest owl-carousel owl-theme" style="transition: 0.5s;">
 
                 <div class="item">
-                  <div class="row">
+                  <div class="row justify-content-center">
                     <div class="col-lg-4  col-md-6">
                       <div class="device" data-id="1">
                        <div class="image">
@@ -1457,7 +1455,7 @@
               <div class="third_crsl _latest owl-carousel owl-theme" >
 
                 <div class="item">
-                  <div class="row">
+                  <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-6 ">
                       <div class="device" data-id="1">
                        <div class="image">
@@ -1628,7 +1626,7 @@
                     <div class="col-lg-4 col-md-6">
                        <div class="device"  data-id="4">
                         <div class="image">
-                            <img class="first" src="./assets/images/16-370x370.jpg" alt="">
+                            <img class="first" src="./assets/images/16-370x370 (1).jpg" alt="">
                             <img class="second" src="./assets/images/10-370x370.jpg" alt="">
                         </div>
                         <div class="rating">
@@ -2032,6 +2030,40 @@
                 </div>
                </div>
               </div>
+            </div>
+        </div>
+      </section>
+      <section id="reclams">
+        <div class="container">
+            <div class="row">
+                <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <div class="image">
+                            <img src="./assets/images/Brand-Logo-1-200x60.png" alt="">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="./assets/images/Brand-Logo-2-200x60 (1).png" alt="">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="./assets/images/Brand-Logo-3-200x60 (1).png" alt="">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="./assets/images/Brand-Logo-4-200x60 (1).png" alt="">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="./assets/images/Brand-Logo-5-200x60 (1).png" alt="">
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
       </section>
