Registration and login page is done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="col-lg-3">
                     <div class="logo">
                       
-                        <a href="#head">
+                        <a href="./index.html">
                             <img src="./assets/images/Logo.png" alt="">
                         </a>
                     </div>
@@ -122,8 +122,8 @@
                     </div>
                     <div class="user_registration me-5">
                             <ul  class="list-unstyled register_ul">
-                                <li><a class="text-dark text-decoration-none" href="">Register</a></li>
-                                <li><a class="text-dark text-decoration-none" href="">Login</a></li>
+                                <li><a class="text-dark text-decoration-none" href="./registration.html">Register</a></li>
+                                <li><a class="text-dark text-decoration-none" href="./login.html">Login</a></li>
                                 <li><a class="text-dark text-decoration-none" href="">Wish List</a></li>
                                 <hr>
                             </ul>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="col-4">
                     <div class="logo   d-flex justify-content-center align-items-center" >
-                        <img style="width: 100%;" src="./assets/images/Logo.png" alt="" >
+                        <a href="./index.html"><img style="width: 100%;" src="./assets/images/Logo.png" alt="" ></a>
                     </div>
                 </div>
                 <div class="col-4">
@@ -203,8 +203,8 @@
                        </div>
                        <div class="user_mobile_registration me-5">
                         <ul  class="list-unstyled register_ul">
-                            <li><a class="text-dark text-decoration-none" href="">Register</a></li>
-                            <li><a class="text-dark text-decoration-none" href="">Login</a></li>
+                            <li><a class="text-dark text-decoration-none" href="./registration.html">Register</a></li>
+                            <li><a class="text-dark text-decoration-none" href="./login.html">Login</a></li>
                             <li><a class="text-dark text-decoration-none" href="">Wish List</a></li>
                             <hr>
                         </ul>
@@ -2033,39 +2033,37 @@
             </div>
         </div>
       </section>
-      <section id="reclams">
-        <div class="container">
-            <div class="row">
+      <section id="reclams" class="p-5">
                 <div class="owl-carousel owl-theme">
-                    <div class="item">
+                    <div class="container d-flex">
+                    
+                    <div class="item m-3">
                         <div class="image">
                             <img src="./assets/images/Brand-Logo-1-200x60.png" alt="">
                         </div>
                     </div>
-                    <div class="item">
+                    <div class="item m-3">
                         <div class="image">
                             <img src="./assets/images/Brand-Logo-2-200x60 (1).png" alt="">
                         </div>
                     </div>
-                    <div class="item">
+                    <div class="item m-3">
                         <div class="image">
                             <img src="./assets/images/Brand-Logo-3-200x60 (1).png" alt="">
                         </div>
                     </div>
-                    <div class="item">
+                    <div class="item m-3">
                         <div class="image">
                             <img src="./assets/images/Brand-Logo-4-200x60 (1).png" alt="">
                         </div>
                     </div>
-                    <div class="item">
+                    <div class="item m-3">
                         <div class="image">
-                            <img src="./assets/images/Brand-Logo-5-200x60 (1).png" alt="">
+                            <img src="./assets/images/Brand-Logo-5-200x60.png" alt="">
                         </div>
                     </div>
-
                 </div>
             </div>
-        </div>
       </section>
    </main>
    <footer style="background-color: rgb(242, 246, 249); ">
