changed dron name and prices

--- a/registration.html
+++ b/registration.html
@@ -398,12 +398,26 @@
                         </div>
                         <div class="icons_social">
                             <ul>
-                                <li class="facebook"><a href=""><i style="color: blue;" class=" fa-brands fa-facebook"></i></a></li>
-                                <li class="twitter"><a href=""><i class=" fa-brands fa-twitter"></i></a></li>
-                                <li class="youTube"><a href=""><i  style="color:red;" class=" fa-brands fa-youtube"></i></a></li>
-                                <li class="google"><a href=""><i style="color:crimson;" class=" fa-brands fa-google-plus-g"></i></a></li>
-                                <li class="pineterest"><a href=""><i  style="color:red;" class=" fa-brands fa-pinterest"></i></a></li>
-                                <li class="instagram"><a href=""><i  style="color:rgb(93, 1, 116);" class=" fa-brands fa-square-instagram"></i></a></li>
+                                <li class="facebook"><a href="">
+                                    <div class="icons">
+                                        <img src="./assets/images/svg/facebook-svgrepo-com (1).svg" alt="">
+                                    </div>
+                                </a></li>
+                                <li class="twitter"><a href="">  <div class="icons">
+                                    <img src="./assets/images/svg/twitter-svgrepo-com.svg" alt="">
+                                </div></a></li>
+                                <li class="youTube"><a href="">  <div class="icons">
+                                    <img src="./assets/images/svg/youtube-svgrepo-com.svg" alt="">
+                                </div></a></li>
+                                <li class="google"><a href="">  <div class="icons">
+                                    <img src="./assets/images/svg/google-plus-svgrepo-com.svg" alt="">
+                                </div></a></li>
+                                <li class="pineterest"><a href="">  <div class="icons">
+                                    <img src="./assets/images/svg/pinterest-svgrepo-com.svg" alt="">
+                                </div></a></li>
+                                <li class="instagram"><a href="">  <div class="icons">
+                                    <img src="./assets/images/svg/instagram-svgrepo-com.svg" alt="">
+                                </div></i></a></li>
                             </ul>
                         </div>
                     </div>
