upper buttons done

--- a/index.html
+++ b/index.html
@@ -2492,6 +2492,13 @@
                 </div>
             </div>
       </section>
+      <div class="circle">
+        <div class="upper">
+            <div class="up">
+                <a class="text-dark text-decoration-none" href="#head"><i class="bi bi-chevron-up"></i></a>
+            </div>
+        </div>
+      </div>
    </main>
    <footer style="background-color: rgb(242, 246, 249); ">
     <div class="container">
