cart page- half part is done and header changed

--- a/registration.html
+++ b/registration.html
@@ -99,20 +99,45 @@
                         <i class="icon bi bi-cart cart"></i>
                         <div class="count"><sup  class="total_count">0</sup></div>
                         <div class="box">
-                            <div class="cart_button_x">
-                                <span>Cart</span>
-                            <div class="exitbutton">
-                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="   15px" height="15px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">  <image id="image0" width="16" height="16" x="0" y="0" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAQAAADlauupAAAABGdBTUEAALGPC/xhBQAAACBjSFJN
-                                    AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QAAKqNIzIAAAAJcEhZ
-                                    cwAAAGAAAABgAPBrQs8AAAAHdElNRQfmBQUKKyJdcBQmAAAAk0lEQVQ4y2NgoAZQ2n38uMoke3ti
-                                    1Sv/d3BQWnD+PMIARRsbZf8XL5ReODkR0qw4ydZWWePlS+UiR0dUVxBhCE7NxBiipGhjg1czukJk
-                                    Q7CJEW0IyZqRQ1pZ4+VLZY2XL5X/OzjgUsdEkqnEAoq8QFEg4lNIMJ0Qk5BwWkBKUsZqiNLpc+fw
-                                    RRU6UJlkb4+SmSgBAPl3bzbjMveUAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDIyLTA1LTA1VDEwOjQz
-                                    OjM0KzAwOjAw2j712QAAACV0RVh0ZGF0ZTptb2RpZnkAMjAyMi0wNS0wNVQxMDo0MzozNCswMDow
-                                    MKtjTWUAAAAASUVORK5CYII="></image>
-                                    </svg>
-                            </div>
-                            <hr>
+                            <div class="cart-sticky">
+                                <div class="exitbutton"  style="    display: flex;
+                                justify-content: space-between; margin-top: 15px; border-bottom: 1px solid rgb(228, 224, 224);">
+                                  <span>CART</span>
+                                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="   15px" height="15px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">  <image id="image0" width="16" height="16" x="0" y="0" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAQAAADlauupAAAABGdBTUEAALGPC/xhBQAAACBjSFJN
+                                      AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QAAKqNIzIAAAAJcEhZ
+                                      cwAAAGAAAABgAPBrQs8AAAAHdElNRQfmBQUKKyJdcBQmAAAAk0lEQVQ4y2NgoAZQ2n38uMoke3ti
+                                      1Sv/d3BQWnD+PMIARRsbZf8XL5ReODkR0qw4ydZWWePlS+UiR0dUVxBhCE7NxBiipGhjg1czukJk
+                                      Q7CJEW0IyZqRQ1pZ4+VLZY2XL5X/OzjgUsdEkqnEAoq8QFEg4lNIMJ0Qk5BwWkBKUsZqiNLpc+fw
+                                      RRU6UJlkb4+SmSgBAPl3bzbjMveUAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDIyLTA1LTA1VDEwOjQz
+                                      OjM0KzAwOjAw2j712QAAACV0RVh0ZGF0ZTptb2RpZnkAMjAyMi0wNS0wNVQxMDo0MzozNCswMDow
+                                      MKtjTWUAAAAASUVORK5CYII="></image>
+                                      </svg>
+                                </div>
+                             
+                                  <div class="cart-bottom">
+                                    <ul>
+                                      <li>
+                                        <span>Sub-Total</span>
+                                        <span>$<span>0</span></span>
+                                      </li>
+                                      <li>
+                                        <span>Eco Tax (-2)</span>
+                                        <span>$<span>0</span></span>
+                                      </li>
+                                      <li>
+                                        <span>VAT (20%)</span>
+                                        <span>$<span>0</span></span>
+                                      </li>
+                                      <li>
+                                        <span>Total</span>
+                                        <span>$<span>0</span></span>
+                                      </li>
+                                    </ul>
+                                    <div class="buttons">
+                                      <button><a class="text-decoration-none href="./cart.html">VIEW CART</a></button>
+                                      <button>CHECKOUT</button>
+                                    </div>
+                                  </div>
                             </div>
                             <ul class="box_device ">
                             
