--- a/cart.html
+++ b/cart.html
@@ -133,7 +133,7 @@
                                       </li>
                                     </ul>
                                     <div class="buttons">
-                                      <button><a class="text-decoration-none href="./cart.html">VIEW CART</a></button>
+                                      <button><a class=" text-darktext-decoration-none" href="./cart.html ">VIEW CART</a></button>
                                       <button>CHECKOUT</button>
                                     </div>
                                   </div>
