cart 75% is done

--- a/cart.html
+++ b/cart.html
@@ -340,6 +340,88 @@
          </div>
           </div>
         </section>
+        <section id="accordions">
+            <div class="container">
+                <div class="title">
+                    <h4>What would you like to do next?</h4>
+                    <p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-8 col-12">
+                        <div class="accordion">
+                            <div class="devices_info">
+                              <div class="cart_info_faq_title" >
+                              <h5>Use Coupon Code</h5>
+                              <i class="bi bi-caret-down-fill me-3"></i>
+                            </div>
+                            <div class="cart_info_ ">
+                              <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+                                natus? Excepturi accusantium, rerum incidunt temporibus iure alias
+                                tempora quisquam odio eius. Ipsam repellat iure accusamus error
+                                dolorum esse, vel sunt.
+                              </p>
+                            </div>
+                            </div>
+                            <div class="devices_info">
+                              <div class="cart_info_faq_title">
+                              <h5>Estimate Shipping & Taxes</h5>
+                              <i class="bi bi-caret-down-fill me-3"></i>
+                            </div>
+                  
+                            <div class="cart_info_" >
+                              <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+                                natus? Excepturi accusantium, rerum incidunt temporibus iure alias
+                                tempora quisquam odio eius. Ipsam repellat iure accusamus error
+                                dolorum esse, vel sunt.
+                              </p>
+                            </div>
+                            </div>
+                            <div class="devices_info ">
+                              <div class="cart_info_faq_title">
+                              <h5>Use Gift Certificate</h5>
+                              <i class="bi bi-caret-down-fill me-3"></i>
+                            </div> 
+                            <div class="cart_info_" >
+                                <p>
+                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+                                  natus? Excepturi accusantium, rerum incidunt temporibus iure alias
+                                  tempora quisquam odio eius. Ipsam repellat iure accusamus error
+                                  dolorum esse, vel sunt.
+                                </p>
+                              </div>
+                           </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-4 col-12">
+                        <div class="cart-bottom">
+                            <ul>
+                              <li>
+                                <span>Sub-Total</span>
+                                <span>$<span>0</span></span>
+                              </li>
+                              <li>
+                                <span>Eco Tax (-2)</span>
+                                <span>$<span>0</span></span>
+                              </li>
+                              <li>
+                                <span>VAT (20%)</span>
+                                <span>$<span>0</span></span>
+                              </li>
+                              <li>
+                                <span>Total</span>
+                                <span>$<span>0</span></span>
+                              </li>
+                            </ul>
+                            <div class="buttons" >
+                              <button>CHECKOUT</button>
+                            </div>
+                          </div>
+                    </div>
+              </div>
+         </div>
+        </section>
     </main>
     <footer style="background-color: rgb(242, 246, 249); ">
         <div class="container">
